--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,1 @@
-{% extends 'base.html' %}
-{% block title %}Home {% endblock %}
-{% block body %}Home {% endblock %}
-
+{% extends 'base.html' %} {% block title %}Home {% endblock %} {% block body %} {% endblock %}
