--- a/templates/sma.html
+++ b/templates/sma.html
@@ -1,1 +1,1 @@
-{% extends 'base.html' %} {% block title %}Home {% endblock %} {% block body %}Home <img src="{{ user_image }}" alt="User Image"> {{ l }}{% endblock %}
+{% extends 'base.html' %} {% block title %}SMA {% endblock %} {% block body %}Home <img src="{{ user_image }}" alt="User Image"> {% endblock %}
