--- a/templates/base.html
+++ b/templates/base.html
@@ -12,11 +12,12 @@
 <body>
     <nav class="navbar">
         <ul class="nav-links">
-            <li class="nav-item"><a href="#"> Home </a> </li>
+            <li class="nav-item"><a href="/"> Home </a> </li>
             <li class="nav-item"><a href="#"> About </a></li>
             <li class="nav-item"><a href="#"> Contact </a></li>
         </ul>
-        <br> {% block body %} {% endblock %}
+    </nav>
+    <br> {% block body %} {% endblock %}
 </body>
 
 </html>
