created ticker template

--- a/templates/download.html
+++ b/templates/download.html
@@ -2,7 +2,7 @@
 {% block title %}Name {% endblock %}
 {% block body %}
 {% if name %}
-<h1> Hello {{name}}</h1>
+<h1>  {{name}} dataset downloaded </h1>
 {% else %}
 <form method="post">
     {{ form.hidden_tag() }}
