--- a/templates/sma.html
+++ b/templates/sma.html
@@ -1,37 +1,68 @@
-{% extends 'base.html' %}
-{% block title %}SMA {% endblock %}
-{% block body %}
-<div>
-    <p>
+{% extends 'base.html' %} {% block title %}SMA {% endblock %} {% block body %}
+<div class="container">
+    <div class="row">
+        <div class="col-md-6">
+            <h6>Simple Chart</h6>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus sint eveniet error repellat maiores sed explicabo temporibus ab. Excepturi, libero magnam sunt aut delectus fuga reprehenderit. Earum praesentium expedita commodi.
+            <img src="{{ pic[4] }}" class="img-fluid" alt="User Image">
+        </div>
+        <div class="col-md-6">
+            <h6>High and low Stock performance chart</h6>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus sint eveniet error repellat maiores sed explicabo temporibus ab. Excepturi, libero magnam sunt aut delectus fuga reprehenderit. Earum praesentium expedita commodi.
+            <img src="{{ pic[1] }}" class="img-fluid" alt="User Image">
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-6">
+            <h6>Stock chart with volume</h6>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus sint eveniet error repellat maiores sed explicabo temporibus ab. Excepturi, libero magnam sunt aut delectus fuga reprehenderit. Earum praesentium expedita commodi.
+            <img src="{{ pic[0] }}" class="img-fluid" alt="User Image">
+
+        </div>
+        <div class="col-md-6">
+            <h6>Simple moving average chart</h6>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus sint eveniet error repellat maiores sed explicabo temporibus ab. Excepturi, libero magnam sunt aut delectus fuga reprehenderit. Earum praesentium expedita commodi.
+            <img src="{{ pic[3] }}" class="img-fluid" alt="User Image">
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-6">
+            <h6>Lstm Prediction</h6>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus sint eveniet error repellat maiores sed explicabo temporibus ab. Excepturi, libero magnam sunt aut delectus fuga reprehenderit. Earum praesentium expedita commodi.
+            <img src="{{ pic[5] }}" class="img-fluid" alt="User Image">
+
+        </div>
+    </div>
+    <!-- <p>
         Simple chart
         <br>
         <img src="{{ pic[4] }}" alt="User Image">
     </p>
     <p>
-        high and low Stock performance chart
+        High and low Stock performance chart
         <br>
         <img src="{{ pic[1] }}" alt="User Image">
     </p>
-      <p>
+    <p>
         Stock chart with volume
         <br>
         <img src="{{ pic[0] }}" alt="User Image">
     </p>
-     <p>
+    <p>
         Simple moving average chart
         <br>
         <img src="{{ pic[3] }}" alt="User Image">
     </p>
-     <p>
+    <p>
         Simple moving average chart with graph
         <br>
         <img src="{{ pic[2] }}" alt="User Image">
     </p>
     <p>
-       Lstm Prediction
+        Lstm Prediction
         <br>
         <img src="{{ pic[5] }}" alt="User Image">
-    </p>
+    </p> -->
 
 </div>
 
