--- a/templates/base.html
+++ b/templates/base.html
@@ -4,20 +4,61 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{{url_for('static',filename='css/main.css')}}">
+    <!-- <link rel="stylesheet" href="{{url_for('static',filename='css/main.css')}}"> -->
+    <link rel="stylesheet" href="{{url_for('static',filename='bootstrap/assets/dist/css/bootstrap.min.css')}}">
+    <link rel="canonical" href="https://getbootstrap.com/docs/5.2/examples/navbar-fixed/"> {% block head %} {% endblock %}
     <title>{% block title %} {% endblock %}</title>
+    <!-- <link href="assets/dist/css/bootstrap.min.css" rel="stylesheet"> -->
+
+
 
 </head>
 
 <body>
-    <nav class="navbar">
+    <nav class="navbar navbar-expand-md navbar-dark  bg-dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="/">Stock Predictor</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+            <div class="collapse navbar-collapse" id="navbarCollapse">
+                <ul class="navbar-nav me-auto mb-2 mb-md-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="/"> Home </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/ticker"> Ticker</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/download"> Download stock </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/faq"> Faq  </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/sma"> previous report </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <!--    </nav> -->
+    <!-- <nav class="navbar">
         <ul class="nav-links">
             <li class="nav-item"><a href="/"> Home </a> </li>
-            <li class="nav-item"><a href="#"> About </a></li>
-            <li class="nav-item"><a href="#"> Contact </a></li>
+            <li class="nav-item"><a href="/ticker"> Ticker </a></li>
+            <li class="nav-item"><a href="/download"> Download stock  </a></li>
+            <li class="nav-item"><a href="/faq"> Faq  </a></li>
+            <li class="nav-item"><a href="/sma"> previous report  </a></li>
         </ul>
-    </nav>
-    <br> {% block body %} {% endblock %}
+    </nav> -->
+    <br>
+    <div class="container">
+        {% block body %} {% endblock %}
+    </div>
+
+    <script type="text/javascript" src="{{url_for('static',filename='bootstrap/assets/dist/js/bootstrap.bundle.min.js')}}"></script>
+
 </body>
 
 </html>
