--- a/templates/download.html
+++ b/templates/download.html
@@ -1,15 +1,15 @@
-{% extends 'base.html' %}
-{% block title %}Name {% endblock %}
-{% block body %}
-{% if name %}
-<h1>  {{name}} dataset downloaded </h1>
+{% extends 'base.html' %} {% block title %}Name {% endblock %} {% block body %} {% if name %}
+<h1> {{name}} dataset downloaded </h1>
 {% else %}
 <form method="post">
-    {{ form.hidden_tag() }}
-    {{ form.name.label }}
-    {{ form.name() }}
-    <br>
-    {{ form.submit() }}
+    <div class="mb-3 form-group row">
+        <div class="col-md-4">
+            {{ form.hidden_tag() }} {{ form.name.label(class="form-label") }} {{ form.name(class="form-control col-md-4") }}
+        </div>
+    </div>
+    <div class="col-md-4 mt-2">
+
+        {{ form.submit(class="btn btn-success") }}
+    </div>
 </form>
-{% endif %}
-{% endblock %}
+{% endif %} {% endblock %}
