--- a/templates/download.html
+++ b/templates/download.html
@@ -1,6 +1,35 @@
 {% extends 'base.html' %} {% block title %}Name {% endblock %} {% block body %} {% if name %}
 <h1> {{name}} dataset downloaded </h1>
 {% else %}
+<div id="arouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+    </div>
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img src="{{url_for('static',filename='photo/1.png')}}" class="d-block" alt="img2">
+        </div>
+        <div class="carousel-item">
+            <img src="{{url_for('static',filename='photo/12.png')}}" class="d-block" alt="img2">
+        </div>
+        <div class="carousel-item">
+            <img src="{{url_for('static',filename='photo/3.png')}}" class="d-block" alt="img2">
+        </div>
+        <div class="carousel-item">
+            <img src="{{url_for('static',filename='photo/4.png')}}" class="d-block" alt="img2">
+        </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+</div>
 <form method="post">
     <div class="mb-3 form-group row">
         <div class="col-md-4">
