--- a/templates/index2.html
+++ b/templates/index2.html
@@ -31,16 +31,16 @@
     </div>
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <img src="{{url_for('static',filename='photo/sma.png')}}" class="d-block" alt="img2">
+            <img src="{{url_for('static',filename='photo/1.png')}}" class="d-block" alt="img2">
         </div>
         <div class="carousel-item">
-            <img src="{{url_for('static',filename='photo/sma.png')}}" class="d-block" alt="img2">
+            <img src="{{url_for('static',filename='photo/12.png')}}" class="d-block" alt="img2">
         </div>
         <div class="carousel-item">
-            <img src="{{url_for('static',filename='photo/V.jpg')}}" class="d-block" alt="img2">
+            <img src="{{url_for('static',filename='photo/3.png')}}" class="d-block" alt="img2">
         </div>
         <div class="carousel-item">
-            <img src="{{url_for('static',filename='photo/V.jpg')}}" class="d-block" alt="img2">
+            <img src="{{url_for('static',filename='photo/4.png')}}" class="d-block" alt="img2">
         </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
